k8s/kubernetes-kanzen-nyumon-material/9_Build_Web_App/deployment_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
      - image: postgres:9.4
        name: db
        ports:
        - containerPort: 5432
        resources: {}
status: {}
