k8s/kubernetes-kanzen-nyumon-material/9_Build_Web_App/deployment_result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: result
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result:before
        name: result
        ports:
        - containerPort: 80
        resources: {}
status: {}
