k8s/kubernetes-kanzen-nyumon-material/9_Build_Web_App/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: db
  type: ClusterIP
status:
  loadBalancer: {}
