k8s/kubernetes-kanzen-nyumon-material/9_Build_Web_App/service_result.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 80
  selector:
    app: result
  type: NodePort
#  type: LoadBalancer
status:
  loadBalancer: {}
