k8s/kubernetes-kanzen-nyumon-material/9_Build_Web_App/service_vote.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vote
  name: vote
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
  type: NodePort
  #type: LoadBalancer
status:
  loadBalancer: {}
