k8s/kubernetes-kanzen-nyumon-material/9_Build_Web_App/ingress_result.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ingress.kubernetes.io/add-base-url: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite /result/(.*) $1 break;
spec:
  rules:
  - http:
      paths:
      - path: /result
        backend:
          serviceName: result
          servicePort: 5001
